@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 ------------------------------------------------- 
 
+- Applied patch for ticket (symbol writing issues) (#3589)
+
 - Added WMS GetFeatureInfo Cascading (#3764)
 
 - Fixed png lib is not found on multiarch systems (#3921)
